--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2018"
 [dependencies]
 sha2 = "0.9.3"
 thiserror = "^1.0"
+bitflags = "^1.2"
+# serde = { version = "^1.0", features = ["derive"] }
+# bincode = "^1.3"
