--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2018"
 sha2 = "0.9.3"
 thiserror = "^1.0"
 bitflags = "^1.2"
+flate2 = "1.0.20"
+serde = { version = "^1.0", features = ["derive"] }
+bincode = "^1.3"
