--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "init_db"
+test = false
+doctest = false
+
 [dependencies]
 sha2 = "0.9.3"
 thiserror = "^1.0"
@@ -13,3 +18,7 @@ bitflags = "^1.2"
 flate2 = "1.0.20"
 serde = { version = "^1.0", features = ["derive"] }
 bincode = "^1.3"
+
+[dev-dependencies]
+tempfile = "3.2.0"
+rand = "^0.8"
