--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ doctest = false
 [dependencies]
 sha2 = "0.9.3"
 thiserror = "^1.0"
-bitflags = "^1.2"
 flate2 = "1.0.20"
 serde = { version = "^1.0", features = ["derive"] }
 bincode = "^1.3"
+bitflags = "1.2.1"
 
 [dev-dependencies]
 tempfile = "3.2.0"
