--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,25 @@ name = "init_db"
 test = false
 doctest = false
 
+[[bin]]
+name = "update_cache"
+test = false
+doctest = false
+
+[[bin]]
+name = "write_tree"
+test = false
+doctest = false
+
 [dependencies]
 sha2 = "0.9.3"
-thiserror = "^1.0"
 flate2 = "1.0.20"
 serde = { version = "^1.0", features = ["derive"] }
 bincode = "^1.3"
 bitflags = "1.2.1"
+anyhow = "1.0.39"
+thiserror = "1.0.24"
+argh = "^0.1"
 
 [dev-dependencies]
 tempfile = "3.2.0"
